--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <meta name="verify-admitad" content="6514a37130" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucky Beauty</title>
 
