--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="verify-admitad" content="6514a37130" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" fetchpriority="high" as="image" href="src/assets/logo.webp" type="image/webp">
     <title>Lucky Beauty</title>
 
     <!-- Yandex.Metrika counter -->
